Thu Jul 25 17:21:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (is_obj_encoding): new macro to check if obj is an
	  Encoding.  obj can be any type while is_data_encoding expects T_DATA
	  only.

Thu Jul 25 17:17:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_expand_path_internal): should clear coderange after
	  copying user name as binary data.

Thu Jul 25 16:17:55 2013  Koichi Sasada  <ko1@atdot.net>

	* encoding.c (check_encoding): Check T_DATA or not.
	  is_data_encoding(obj) assumes that `obj' is T_DATA.

Thu Jul 25 13:06:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_s_home): use rb_home_dir_of and rb_default_home_dir.

	* file.c (rb_home_dir_of): split from rb_home_dir() for the home
	  directry of the given user, and the user name is a VALUE, not a bare
	  pointer.  should raise if the user does not exist.

	* file.c (rb_default_home_dir): split from rb_home_dir() for the home
	  directry of the current user.

Thu Jul 25 12:32:11 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/openssl/ossl.c: support additional three thread synchronization
	  functions. [ruby-trunk - Bug #8386]

Thu Jul 25 07:15:58 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems from master as of commit 4ff70cc
	* test/rubygems:  ditto.

Wed Jul 24 20:57:44 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_set_arguments): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

	* compile.c (iseq_set_exception_table): ditto.

Wed Jul 24 19:49:54 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (find_proxy): raise BadURIError if the URI is
	  a relative URI. [Bug #8645]

Wed Jul 24 18:56:06 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_expandarray): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

	* vm_insnhelper.c (vm_caller_setup_args): ditto.

	* vm_insnhelper.c (vm_yield_setup_block_args): ditto.
